k8s/base/manifests.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-project-python
  namespace: default
  labels:
    app: cicd-project-python
spec:
  selector:
    matchLabels:
      app: cicd-project-python
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cicd-project-python
    spec:
      containers:
      - name: cicd-project-python
        image: KUSTOMIZE
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 5000
          name: http
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: cicd-project-python-service
spec:
  selector:
    app: cicd-project-python
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-project-python-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: cicd-project-python.lmasu.co.za
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cicd-project-python-service
                port:
                  number: 80
